couple bug fixes
-chat box was too wide
-icon selection color was not showing up

--- a/core/static/css/room.css
+++ b/core/static/css/room.css
@@ -632,6 +632,8 @@
 	width: 100%;
 
 	margin-top: var(--panel-padding);
+
+	box-sizing: border-box;
 }
 
 #unread-count{
